--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 </head>
 <body style="font-family: Arial, sans-serif; background-color: #f5f5f5; color: #333; margin: 0; padding: 0;">
     <header style="background-color: #2c3e50; padding: 20px; text-align: center;">
-        <h1 style="color: white; margin: 0;">Mi opinion sobre la pelicula "Nombre de la pelicula"</h1>
+        <h1 style="color: white; margin: 0;">Mi opinion sobre la pelicula "tornados"</h1>
     </header>
     <main style="max-width: 800px; margin: 30px auto; background-color: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px black;">
         <section>
             <h2 style="color: #2c3e50;">Sinopsis</h2>
-            <p>"Pegar Sinopsis</p>
+            <p>"Una excazadora de tormentas, que tuvo un devastador encuentro con un tornado durante sus años universitarios, es atraída por un amigo de regreso a las llanuras abiertas para probar un innovador sistema de seguimiento.</p>
         </section>
 
         <section>
@@ -21,15 +21,15 @@
 
         <section>
             <h2 style="color: #2c3e50;">Calificación Personal</h2>
-            <p style="font-size: 24px; color: #f39c12;">★★★★☆ 4/5</p>
+            <p style="font-size: 24px; color: #f39c12;">★★★★★ 5/5</p>
         </section>
 
         <section>
-            <img src="https://pics.filmaffinity.com/Interestelar-366875261-large.jpg" style="width: 100%,; border-radius: 10px;">
+            <img src="https://m.media-amazon.com/images/S/pv-target-images/ef7645389dfd8046626c2b94482ccead584cb850cf02133f48aa9e4d86a7569d.jpg" style="width: 100%,; border-radius: 10px;">
         </section>
     </main>
     <footer style="text-align: center; padding: 20px; background-color: white; color: black;">
-        <p>Creado por [Patricio Campos] - 2025</p>
+        <p>Creado por [melissa santillan] - 2025</p>
     </footer>
 </body>
 </html>
