--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <section>
             <h2 style="color: #2c3e50;">Mi opinion</h2>
-            <p>"Escribir opinion"</p>
+            <p>"me gusto mucho esta pelicula entretiene mucho se las recomiendo verla"</p>
             <p></p>
         </section>
 
